Fix (pdfwrite) Bug #691133. If producing PDF/A output. and a DOCINFO pdfmark string was UTF_16BE encoded *and* contained a numeric character, then decode_escape incorrectly consumed any numeric characters following the first octal byte of the UTF16 code.

This was caused by decode_escape assuming that octal sequences are terminated by
non-numeric characters which is clearly wrong. The octal escape decoding loop is now
terminated when :
1) 3 numeric characters are read from the string
2) No more data is available in the string
3) A non-numeric character is encountered in the string.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10785 a1074d23-0009-0410-80fe-cf8c14f379e6